This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).

2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
stopped getting stage position from scope when adding points marked on buffer;
fixed a crash using that with collapsed groups (In 4.1).

2/28/24: Fixed setting variables on command line for ReportCurrentBuffer and
ReportActiveViewTitle (In 4.1).

2/27/24: SEM_4-1-6
2/27/24: Fixed initial angle set from lines in high-focus mag calibration to
omit adjustments for high focus (In 4.1).

2/23/24: Made FEI scope plugin and server adjust the exposure time to get the
expected number of EER frames even if camera timing hasn't been tuned; made
camera dialog show true dose including frames lost for CDS in counting mode;
put the exposure time and dose including these lost frames in the mdoc file
(In 4.1).

2/23/24: Fixed Test Multishot Positions to not apply the beam tilt adjustments
if the option is off (In 4.1).

2/23/24: Made UseNavGroupForMultishot use the group currently being acquired
when acquiring (In 4.1).

2/22/24: Kept function set with OnStopCallFunc from being called on normal
script exit (In 4.1).

2/20/24: Fixed SetupFullMontage and SetupPolygonMontage to convert filename to
full path, wait for stage move to finish, and stop on error (In 4.1).

2/19/24: Made it consider only files with extension .gain, .tif, or .tiff
when looking for Falcon EER gain reference (In 4.1).

2/15/14: Made completion line in One-Line Script window resize with width of
window (In 4.1).

2/15/24: Made Autosave Log in Tilt Series menu do just what the help says,
save after every tilt, and not activate a general autosave (In 4.1).

2/15/24: SEM_4-1-5