@@ -5147,7 +5147,8 @@
           <TD class="scriptcommand">SkipAcquiringGroup [#I] [#T]</TD>
           <TD>Tells the Navigator to skip points whose group ID match either the group ID of
             the current acquire item, or the optional <b>#I</b> entered with the command.&nbsp; The
-            items will still be marked for Acquire unless the optional <b>#T</b> is nonzero.&nbsp; The 
+            items will still be marked for Acquire unless the optional <b>#T</b> is nonzero (in this case, 
+            enter 0 for <b>#I</b> to use the ID of the current item).&nbsp; The 
             Navigator must be acquiring at points.</TD>
         </TR>
         <TR>
