@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/29/24: Fixed double counting item skipped in main script as done (In 4.1).
+
 2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).
 
 2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
